<resources>
    <string name="app_name">Joemol_Joy_Project2</string>
    <string name="welcome_to">Welcome</string>
    <string name="welcome_image">welcome image</string>
    <string name="enjoy_your_online_shopping">Enjoy your online shopping !</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_page">register page</string>
    <string name="need_an_account">Need an account?</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="logout">Logout</string>
    <string name="account_symbol">account symbol</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="landscape_background">landscape background</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout_summary">Checkout Summary</string>
    <string name="sub_total">Sub Total</string>
    <string name="tax_13">Tax (13%)</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="back_button">back button</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="continue_word">Continue</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Name On Card</string>
    <string name="place_order">Place Order</string>
    <string name="cart_button">cart button</string>
    <string name="product_image">Product Image</string>
    <string name="minus_button">minus button</string>
    <string name="plus_button">plus button</string>
    <string name="color">Color:</string>
    <string name="products">Products</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you">Thank You!!</string>
    <string name="your_order_has_been_placed">Your order has been placed</string>
    <string name="sofa_image">sofa image</string>
</resources>