<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="3dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/final_bg"
        android:contentDescription="@string/background" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="223dp"
        android:contentDescription="@string/welcome_image"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grotto_logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="298dp"
        android:gravity="center"
        android:text="@string/enjoy_your_online_shopping"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getStartedButton" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:backgroundTint="@android:color/transparent"
        android:elevation="15dp"
        android:text="@string/get_started"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:strokeColor="@color/white"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>