<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity"
    tools:layout_editor_absoluteX="-11dp"
    tools:layout_editor_absoluteY="-192dp">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="131dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209"
        app:srcCompat="@drawable/grotto_logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/cartImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/cartImage"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cart_image"
        android:contentDescription="@string/cart_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="50dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/product_image"
                app:layout_constraintBottom_toTopOf="@+id/nameDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="TextView"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/colourDetail"
                app:layout_constraintEnd_toStartOf="@+id/priceDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

            <TextView
                android:id="@+id/descDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:paddingHorizontal="30dp"
                android:text="TextView"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/colourDetail" />

            <TextView
                android:id="@+id/priceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="TextView"
                android:textSize="28sp"
                app:layout_constraintBottom_toTopOf="@+id/colourDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/nameDetail"
                app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

            <Button
                android:id="@+id/addToCartBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/blue"
                android:text="@string/add_to_cart"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.836"
                app:layout_constraintStart_toEndOf="@+id/minusCount"
                app:layout_constraintTop_toBottomOf="@+id/descDetail"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/minusCount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descDetail"
                app:srcCompat="@drawable/minus"
                android:contentDescription="@string/minus_button" />

            <ImageView
                android:id="@+id/addCount"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addToCartBtn"
                app:layout_constraintStart_toEndOf="@+id/count"
                app:layout_constraintTop_toBottomOf="@+id/descDetail"
                app:srcCompat="@drawable/plus"
                android:contentDescription="@string/plus_button" />

            <TextView
                android:id="@+id/count"
                android:layout_width="14dp"
                android:layout_height="29dp"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="20dp"
                android:gravity="center|center_horizontal"
                android:text="1"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addCount"
                app:layout_constraintStart_toEndOf="@+id/minusCount"
                app:layout_constraintTop_toBottomOf="@+id/descDetail" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="10dp"
                android:text="@string/color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/descDetail"
                app:layout_constraintEnd_toStartOf="@+id/colourDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameDetail" />

            <TextView
                android:id="@+id/colourDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="206dp"
                android:text="TextView"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/descDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/nameDetail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>